# LycheeStudio

./: .env  .gitignore  .npmrc  CLAUDE.md  DEMO.md  README.md  RUN_INSTRUCTIONS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  settings-api.js  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json
public/: electron.js  index.html  manifest.json  preload.js
scripts/: README.md  kill-processes.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: 32x32.png.backup
src-tauri/src/: main.rs
src/components/: AIConfig.tsx  ClaudeCodeManager.tsx  ClaudePromptsManager.tsx  ClaudeProviderManager.css  ClaudeProviderManager.tsx  CodeEditor.tsx  Dashboard.tsx  ElectronTitleBar.tsx  InstallDialog.tsx  InstallationLogPanel.tsx  LanguageSwitcher.tsx  MCPManager.tsx  MacTitleBar.tsx  MarkdownEditor.tsx  NPMManager.tsx  NativeTitleBar.tsx  NodeManager.tsx  PackageManager.tsx  Settings.tsx  TemplateLibrary.tsx  TemplateModal.tsx  ThemeSwitcher.tsx  TitleBar.tsx  WindowControls.tsx
src/contexts/: AppContext.tsx
src/data/: builtinTemplates.ts  providerTemplates.ts
src/hooks/: useInstallation.ts
src/lib/: electron-commands.ts  tauri-commands.ts
src/locales/: en.ts  zh.ts
src/menu/: menu.ts
src/services/: installationService.ts  notificationService.ts
src/types/: electron.d.ts  i18n.ts  installation.ts  mcp.ts  prompts.ts
src/utils/: mcpStorage.ts  promptsStorage.ts  storage.ts  suppressWarnings.ts
